# research-pipeline

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  config.example.toml  harness-engineering-research-report.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  research-pipeline.code-workspace  run-copilot-loop.sh  sitemap.xml
.agent/artifacts/: clause_investigation.json  compliance_report.md  impl_check_daily_ai.json  impl_check_implplan.json  impl_check_report.json  readiness_report.json  trace_unknown_clause.json
.claude/rules/: cli.md  mcp-server.md  models.md  testing.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  enhancement.yml
.github/agents/: paper-analyzer.md  paper-screener.md  paper-synthesizer.md
.github/daily-brief/: registry.toml
.github/instructions/: cli.instructions.md  mcp-server.instructions.md  models.instructions.md  testing.instructions.md
.github/prompts/: audit-only.md  audit-phase-a-before-phase-b.md  audit-phase-b-before-phase-c.md  audit-phase-e-before-phase-f.md  audit-phase-f-before-phase-g.md  continue-current-ticket-phase-b.md  continue-current-ticket-phase-c.md  continue-current-ticket-phase-d.md  continue-current-ticket-phase-e.md  continue-current-ticket-phase-f.md  continue-current-ticket-phase-g.md  continue-current-ticket.md  final-audit-fix-one-gap.md  final-completeness-audit.md
.github/scripts/: run-claude-issue-loop.sh  run-copilot-loop.sh
.github/workflows/: ci.yml  daily-brief.yml  docs.yml  publish.yml
Designing Reliable Complex Skills for AI Coding Agents: A Practical Manual for Deterministic and LLM-Based Workflow Control/: index.html
_archive/Designing Reliable Complex Skills for AI Coding Agents: A Practical Manual for Deterministic and LLM-Based Workflow Control/: index.html
_archive/architecture/: index.html
_archive/briefing-replay/: index.html
_archive/daily-ai-intelligence/: final-audit-status-addendum.yaml  phase-b-status-transition.patch.yaml  phase-f-status-transition.patch.yaml  phase-g-status-transition.patch.yaml  source-registry.phase-a.example.yaml
_archive/daily-ai-intelligence-implementation-plan/: index.html
_archive/implementation-plan/: index.html
_archive/python development/: index.html
_archive/step 1/: index.html
_archive/step 2/: index.html
adr/: index.html
adr/ADR-001-uv-build-tool/: index.html
adr/ADR-002-pydantic-domain-models/: index.html
adr/ADR-003-stage-based-pipeline/: index.html
adr/ADR-004-conversion-backend-registry/: index.html
adr/ADR-005-sqlite-persistent-state/: index.html
adr/ADR-006-fastmcp-server/: index.html
adr/ADR-007-multi-tier-memory/: index.html
adr/ADR-008-briefing-vs-academic-pipeline/: index.html
api-reference/: index.html
architecture/: index.html
audit-deep-research-compliance-2026-05-17/: index.html
briefings/2026-04-29/: source_registry_snapshot.json  telemetry.jsonl  workflow_state.json
briefings/2026-04-30/: source_registry_snapshot.json  telemetry.jsonl  workflow_state.json
briefings/2026-05-01/: telemetry.jsonl  workflow_state.json
briefings/2026-05-02/: telemetry.jsonl  workflow_state.json
briefings/2026-05-03/: telemetry.jsonl  workflow_state.json
briefings/2026-05-04/: telemetry.jsonl  workflow_state.json
briefings/2026-05-05/: telemetry.jsonl  workflow_state.json
briefings/2026-05-06/: telemetry.jsonl  workflow_state.json
briefings/2026-05-07/: telemetry.jsonl  workflow_state.json
briefings/2026-05-08/: telemetry.jsonl  workflow_state.json
briefings/2026-05-09/: telemetry.jsonl  workflow_state.json
briefings/2026-05-10/: telemetry.jsonl  workflow_state.json
briefings/2026-05-11/: telemetry.jsonl  workflow_state.json
briefings/2026-05-12/: telemetry.jsonl  workflow_state.json
briefings/2026-05-13/: telemetry.jsonl  workflow_state.json
briefings/2026-05-14/: telemetry.jsonl  workflow_state.json
briefings/2026-05-15/: telemetry.jsonl  workflow_state.json
briefings/2026-05-16/: telemetry.jsonl  workflow_state.json
briefings/2026-05-17/: telemetry.jsonl  workflow_state.json
briefings/2026-05-18/: telemetry.jsonl  workflow_state.json
briefings/2026-05-19/: telemetry.jsonl  workflow_state.json
briefings/2026-05-20/: telemetry.jsonl  workflow_state.json
briefings/2026-05-21/: telemetry.jsonl  workflow_state.json
briefings/2026-05-22/: telemetry.jsonl  workflow_state.json
briefings/2026-05-23/: telemetry.jsonl  workflow_state.json
changelog/: index.html
complex_multi_step_skill_design_guideline/: index.html
data-model/: index.html
developer-guide/: index.html
docs/: Designing Reliable Complex Skills for AI Coding Agents: A Practical Manual for Deterministic and LLM-Based Workflow Control.md  api-reference.md  architecture.md  audit-deep-research-compliance-2026-05-17.md  complex_multi_step_skill_design_guideline.md  daily-ai-intelligence-implementation-plan.md  data-model.md  developer-guide.md  getting-started.md  implementation-plan.md  index.md  operations-runbook.md  python development.md  research-to-product-blueprint-skill-design.md  security-model.md  software_documentation_rebuild_methodology.md  spec-deltas-since-rev-1.0.md  step 2.md  system-design.md  testing-strategy.md  upstream-tooling-issues.md  user-guide.md  user-manual.md
getting-started/: index.html
implementation-plan/: index.html
mcp_server/: __init__.py  __main__.py  prompts.py  resources.py  schemas.py  server.py  tools.py
operations-runbook/: index.html
python development/: index.html
research-to-product-blueprint-skill-design/: index.html
search/: search_index.json
security-model/: index.html
software_documentation_rebuild_methodology/: index.html
spec-deltas-since-rev-1.0/: index.html
step 1/: index.html
step 2/: index.html
system-design/: index.html
testing-strategy/: index.html
upstream-tooling-issues/: index.html
user-guide/: index.html
user-manual/: index.html
(+8481 files in other folders)
