[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[project]
name = "research-pipeline"
version = "0.13.52"
description = "A multi-source pipeline for searching, screening, downloading, converting, and summarizing academic papers from arXiv, Google Scholar, and more."
readme = "README.md"
license = "MIT"
authors = [
  {name = "Grammy Jiang", email = "grammy.jiang@gmail.com"}
]
requires-python = ">=3.12"
keywords = [
  "arxiv",
  "academic",
  "papers",
  "research",
  "pipeline",
  "literature-review",
  "pdf-to-markdown",
  "mcp",
  "model-context-protocol"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Typing :: Typed"
]
dependencies = [
  "pydantic>=2.0,<3",
  "typer>=0.12,<1",
  "requests>=2.31,<3",
  "tomli>=2.0;python_version<'3.11'",
  "rank-bm25>=0.2,<1",
  "mcp[cli]>=1.0",
  "lxml>=6.0.2"
]

[project.optional-dependencies]
docling = [
  "docling>=2.0"
]
marker = [
  "marker-pdf>=1.10"
]
pymupdf4llm = [
  "pymupdf4llm>=0.0.17"
]
mineru = [
  "magic-pdf>=0.9"
]
mathpix = []
datalab = [
  "datalab-python-sdk>=0.1"
]
llamaparse = [
  "llama-cloud>=1.0"
]
mistral-ocr = [
  "mistralai>=1.0"
]
openai-vision = [
  "openai>=1.0",
  "PyMuPDF>=1.24"
]
llm = []
scholar = ["scholarly>=1.7"]
serpapi = ["google-search-results>=2.4"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "vcrpy>=6.0",
  "ruff>=0.4",
  "black>=24.0",
  "isort>=5.0",
  "mypy>=1.10",
  "types-requests>=2.31",
  "pre-commit>=4.0",
  "jinja2>=3.1"
]
reranker = [
  "sentence-transformers>=2.2"
]

[project.scripts]
research-pipeline = "research_pipeline.cli.app:app"

[project.urls]
Documentation = "https://github.com/grammy-jiang/research-pipeline/tree/master/docs"
Homepage = "https://github.com/grammy-jiang/research-pipeline"
Issues = "https://github.com/grammy-jiang/research-pipeline/issues"
Repository = "https://github.com/grammy-jiang/research-pipeline"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: marks tests that require live arXiv access (deselect with '-m \"not live\"')"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/research_pipeline/summarization/html_export.py" = ["E501"]
"src/research_pipeline/summarization/report_templates.py" = ["E501"]

[tool.uv.build-backend]
source-exclude = [".mypy_cache/**"]
